kubernetes_helm/01_apps-with-only-manifests/dev/red/red-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: red
  namespace: dev
  labels:
    app: red
spec:
  replicas: 1
  selector:
    matchLabels:
      app: red
  template:
    metadata:
      labels:
        app: red
    spec:
      containers:
        - name: red
          image: nginx:1.19.2
          volumeMounts:
            - name: html
              mountPath: /usr/share/nginx/html
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 100m
              memory: 100Mi
      volumes:
        - name: html
          configMap:
            name: red
            items:
              - key: body
                path: index.html
