kubernetes_helm/01_apps-with-only-manifests/dev/red/red-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: red
  namespace: dev
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: "/"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /dev/red
            pathType: Exact
            backend:
              service:
                name: red
                port: 
                  number: 80
